# mlp-icl

./: .gitignore  LICENSE.txt  README.md  model.py  pyproject.toml  requirements.txt  train.py
experiment/: 10_finite_regression.py  11_mlp_superior.py  12_1_varlen.py  12_icl_clean.py  13_simple_clean.py  14_relational_clean.py  15_same_diff.py  16_points_d.py  17_loss_landscape.py  18_alex_mup.py  19_distributions.py  1_symbolic_distance_dist.py  2_product_tasks.py  3_oddball_tasks.py  4_match_tasks.py  5_points.py  6_knn_comparison.py  6_knn_comparison_match.py  7_knn_comparison_oddball.py  8_regression_tasks.py  9_gautam_match.py  common.py
experiment/remote/10_finite_regression/: run.py  submit.sh
experiment/remote/10_finite_regression/rep/: run.py  submit.sh
experiment/remote/10_finite_regression/scale/: run.py  submit.sh
experiment/remote/10_finite_regression/scale_param/: run.py  submit.sh
experiment/remote/10_finite_regression/scale_pd/: run.py  submit.sh
experiment/remote/11_mlp_superior/scale/: run.py  submit.sh
experiment/remote/11_mlp_superior/scale_classify/: run.py  (+1 more)
experiment/remote/4_match_tasks/: run.py
experiment/remote/6_knn_comparison/: run.py
experiment/remote/7_knn_comparison_oddball/: run.py  submit.sh
experiment/remote/8_regression_tasks/: run.py  submit.sh
experiment/remote/9_gautam_match.py/: run.py  submit.sh
mlp_icl/model/: mlp.py  transformer.py
mlp_icl/task/: function.py  oddball.py  regression.py
model/: knn.py  mlp.py  poly.py  transformer.py
task/: function.py  match.py  oddball.py  regression.py  ti.py
(+51 files in other folders)
